Medidata Solutions Careers - Senior Product Owner. Cape Analytics - Sr. Product Manager. Cape Analytics - Product Manager. Funko Careers - Technical Product Manager, Mobile Apps. Job Application for Senior Product Manager, Competitive Intelligence at Wayfair. FloQast - Product Manager. Apttus Careers - Senior Product Manager. Job @ Productsup (Berlin): Product Manager (m/f/d) | JOIN. LinkedIn Careers - Senior Product Manager. Serenova Careers - Product Manager. CaseWare - Jobs: Product Owner - Cloud Platform - Apply online. Brandwatch Careers - Data Product Manager. Tipico Product Manager (m/f/d) CRM | SmartRecruiters. Tipico Product Manager (m/f/d) Payments | SmartRecruiters. Job @ close2real (Berlin): Technical Product Owner... | JOIN. Job Application for Technical Product Manager at Capital on Tap.  AAK karriärer–Assistant Technical Product Manager. Reward Gateway - E-Commerce Product Manager. Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN. Cermati.com Product Manager (All Level) | SmartRecruiters. Job Application for Product Designer Manager at Graphisoft. Diversatek, Inc. Careers - Product Manager, Medical Devices. Divvy - Senior Product Designer. Job Application for Product Manager, Delivery at Marqeta. eFront - Product Owner - Paris or Belgrade. Endless - Sr. Product Designer. Endless - Product Designer. Product Owner - Apply online - Winnow - Jobs. Tradesy - Product Designer. Liferay, Inc. Careers - Product Designer. Job Application for Product Manager  at CityBase. Job Application for Product Manager, Productivity & Domains (BA) at AppDirect. Symplicity - Senior Product Manager. Shopify - Product Manager. Funding Circle UK Careers - Senior Product Manager, Investor. Job Application for Senior Product Designer at Splash.     Product Manager at LoveCrafts .       Senior Product Owner - Tylko     . Senior Technical Product Manager, Sales and Support Platforms. BlackLine Careers - Staff Product Designer. BlackLine Careers - Principal Product Manag

--- a/product-manager.html
+++ b/product-manager.html
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/apttus/job/oyVL9fw7'>Apttus Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/apttus/job/oyVL9fw7'>Apttus Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPnaVfw1&k=Job&j=oa8Z9fwa&__jvst=Referral&__jvsd=sHyaOgwY&__jvsc=Twitter&bid=nyK5UKww'>Serenova Careers - Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPnaVfw1&k=Job&j=oa8Z9fwa&__jvst=Referral&__jvsd=sHyaOgwY&__jvsc=Twitter&bid=nyK5UKww'>Serenova Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -92,7 +92,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tipico/743999692361434-product-manager-m-f-d-payments'>Tipico Product Manager (m/f/d) Payments | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Tipico/743999692361434-product-manager-m-f-d-payments'>Tipico Product Manager (m/f/d) Payments | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rewardgateway/426a19fb-9393-455c-af59-1f33bbe7ce3d'>Reward Gateway - E-Commerce Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rewardgateway/426a19fb-9393-455c-af59-1f33bbe7ce3d'>Reward Gateway - E-Commerce Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -116,7 +116,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999692350480-product-manager-all-level-'>Cermati.com Product Manager (All Level) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999692350480-product-manager-all-level-'>Cermati.com Product Manager (All Level) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -124,7 +124,7 @@
 <p><span class="badge badge-light">Budapest, Hungary</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/diversatek/job/oxODafwS'>Diversatek, Inc. Careers - Product Manager, Medical Devices</a></h5> 
+<h5><a href='https://jobs.jobvite.com/diversatek/job/oxODafwS'>Diversatek, Inc. Careers - Product Manager, Medical Devices</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -173,7 +173,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/4d4865c6-5205-4661-ad9f-1e26e4028154'>Shopify - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/shopify/4d4865c6-5205-4661-ad9f-1e26e4028154'>Shopify - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -185,7 +185,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://lovecrafts.recruiterbox.com/jobs/fk031wm'>
+<h5><a href='http://lovecrafts.recruiterbox.com/jobs/fk031wm'>
     Product Manager at LoveCrafts
 </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -207,7 +207,7 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/blackline/job/ojrDafwh'>BlackLine Careers - Principal Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/blackline/job/ojrDafwh'>BlackLine Careers - Principal Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -227,7 +227,7 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Senior Product Manager at Cloudability.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/B9338DE99B'>SkySlope - Jobs: Senior Product Manager - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/B9338DE99B'>SkySlope - Jobs: Senior Product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Senior Product Manager at SkySlope.</p>
 <hr/>
@@ -235,7 +235,7 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Associate Product Manager at Pegipegi.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocteam/jobs/4363558002'>Job Application for Senior Product Manager (Baltimore) at Ad Hoc</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adhocteam/jobs/4363558002'>Job Application for Senior Product Manager (Baltimore) at Ad Hoc</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -271,7 +271,7 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://relogix.recruitee.com/o/product-manager-1'>
+<h5><a href='https://relogix.recruitee.com/o/product-manager-1'>
       Product Manager - Relogix
     </a></h5> 
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
@@ -408,7 +408,7 @@ other?...</p>
 <p><span class="badge badge-light">?le-de-France, France</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4318075002'>Job Application for Senior Product Designer at Globality, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4318075002'>Job Application for Senior Product Designer at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
